<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@color/white1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintTop_toBottomOf="@+id/cons_Toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="@dimen/dp_125"
                        android:layout_height="@dimen/dp_125"
                        android:background="@color/white"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_35"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>


                <ImageView
                    android:id="@+id/img_Edit"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:elevation="@dimen/dp_2"
                    android:src="@drawable/edit_image"
                    app:layout_constraintEnd_toEndOf="@+id/imgProfile"
                    app:layout_constraintBottom_toBottomOf="@+id/imgProfile"/>

                <View
                    android:id="@+id/View"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="24dp"
                    android:background="@color/gray2"
                    android:elevation="@dimen/dp_2"
                    app:layout_constraintTop_toBottomOf="@+id/imgProfile"/>

                <EditText
                    android:id="@+id/edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/enter_name"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/round_corner_20_outline"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_30"
                    app:layout_constraintTop_toBottomOf="@+id/View"/>

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/enter_mail"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/round_corner_20_outline"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_25"
                    app:layout_constraintTop_toBottomOf="@+id/edt_Name"/>

                <EditText
                    android:id="@+id/edt_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/mobile"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:inputType="number"
                    android:maxLength="10"
                    android:background="@drawable/round_corner_20_outline"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_25"
                    app:layout_constraintTop_toBottomOf="@+id/edt_Email"/>

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/password"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/round_corner_20_outline"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_25"
                    app:layout_constraintTop_toBottomOf="@+id/edt_Mobile"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_Save"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:text="@string/save"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginVertical="@dimen/dp_30"
                    android:background="@drawable/edt_solid_color_teal_corner_15"
                    app:layout_constraintTop_toBottomOf="@+id/edt_password"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
