<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Activities.OtpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_Otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_Otp1"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/otp_outline_bg_round_corner_circle"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/dp_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cons_Otp2"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/txt_Otp1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_Otp2"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/otp_outline_bg_round_corner_circle"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@+id/cons_Otp1"
                app:layout_constraintEnd_toStartOf="@+id/cons_Otp3"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/txt_Otp2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_Otp3"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/otp_outline_bg_round_corner_circle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cons_Otp2"
                app:layout_constraintEnd_toStartOf="@id/cons_Otp4"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/txt_Otp3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_Otp4"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/otp_outline_bg_round_corner_circle"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cons_Otp3"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/txt_Otp4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fourth"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_Currently"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currently_otp_set_static"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cons_Otp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_Email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:visibility="gone"
            android:background="@drawable/edt_solid_color_teal_corner_15"
            android:layout_marginHorizontal="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/cons_Otp">

            <ImageView
                android:id="@+id/img_Email"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="8dp"
                android:paddingStart="@dimen/dp_5"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/gray" />

            <EditText
                android:id="@+id/edt_Email"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/enter_mail"
                android:textSize="@dimen/sp_14"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"
                android:textCursorDrawable="@drawable/black_cursor"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/dp_5"
                app:layout_constraintStart_toEndOf="@+id/img_Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:text="@string/verify_otp"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/edt_solid_color_teal_corner_15"
            android:layout_marginHorizontal="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@+id/cons_Email"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>