<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Activities.Hotel_Detail_Activity">

        <ImageView
            android:id="@+id/ic_Back"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_arrow_back"
            android:layout_margin="@dimen/dp_8"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_Hotel_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/dp_5"
            app:layout_constraintTop_toBottomOf="@+id/txt_Hotel_Name"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_Image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_140"
                    app:cardElevation="@dimen/dp_5"
                    app:cardCornerRadius="@dimen/dp_15"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_Hostel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_hostel"
                        android:scaleType="fitXY"/>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_Detail_Hostels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintTop_toBottomOf="@+id/cv_Image"
                    tools:layout_editor_absoluteX="13dp" />

                <TextView
                    android:id="@+id/txt_Tittle_Address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintStart_toStartOf="@+id/rv_Detail_Hostels"
                    app:layout_constraintTop_toBottomOf="@+id/rv_Detail_Hostels"/>

                <TextView
                    android:id="@+id/txt_Address"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:paddingHorizontal="@dimen/dp_5"
                    app:layout_constraintStart_toEndOf="@+id/txt_Tittle_Address"
                    app:layout_constraintEnd_toEndOf="@+id/rv_Detail_Hostels"
                    app:layout_constraintTop_toTopOf="@+id/txt_Tittle_Address"/>

                <TextView
                    android:id="@+id/txt_Tittle_Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintStart_toStartOf="@+id/edt_Description"
                    app:layout_constraintTop_toBottomOf="@+id/txt_Address" />

                <TextView
                    android:id="@+id/txt_Rs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pounds"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/gray"
                    android:layout_marginStart="@dimen/dp_10"
                    app:layout_constraintStart_toEndOf="@+id/txt_Tittle_Price"
                    app:layout_constraintTop_toTopOf="@+id/txt_Tittle_Price"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_Tittle_Price"/>

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:layout_marginStart="@dimen/dp_3"
                    app:layout_constraintStart_toEndOf="@+id/txt_Rs"
                    app:layout_constraintTop_toTopOf="@+id/txt_Rs"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_Rs"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cons_Date_Picker"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:background="@drawable/round_corner_20_outline"
                    android:layout_marginHorizontal="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_15"
                    app:layout_constraintTop_toBottomOf="@+id/txt_Tittle_Price">

                    <TextView
                        android:id="@+id/txt_Select_Date"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_0"
                        android:hint="@string/select_date"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/gray"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/img_Date_Picker"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:id="@+id/img_Date_Picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"
                        android:paddingEnd="@dimen/dp_10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txt_Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_15"
                    app:layout_constraintStart_toStartOf="@+id/rv_Detail_Hostels"
                    app:layout_constraintTop_toBottomOf="@+id/cons_Date_Picker"/>

                <EditText
                    android:id="@+id/edt_Description"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_140"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/round_corner_20_outline"
                    android:gravity="left"
                    android:hint="@string/enter"
                    android:padding="@dimen/dp_10"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="@+id/cv_Image"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txt_Description"
                    app:layout_constraintTop_toBottomOf="@+id/txt_Description" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBook_Now"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:text="@string/book_now"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:background="@drawable/edt_solid_color_teal_corner_15"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginVertical="@dimen/dp_30"
                    app:layout_constraintTop_toBottomOf="@+id/edt_Description"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
